fix: [CVS-9099]: Service name is overflowing in the Monitored Service list page

--- a/src/modules/85-cv/components/HarnessServiceAndEnvironment/components/EnvToolTipDisplay.module.scss
+++ b/src/modules/85-cv/components/HarnessServiceAndEnvironment/components/EnvToolTipDisplay.module.scss
@@ -9,8 +9,15 @@
   color: var(--white) !important;
 }
 
+.envName{
+  white-space: nowrap !important; 
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+}
+
 :global {
   .bp3-popover-arrow-fill {
     fill: var(--black) !important;
   }
+
 }
