--- a/src/modules/85-cv/components/PipelineSteps/ContinousVerification/components/HealthSources/HealthSources.module.scss
+++ b/src/modules/85-cv/components/PipelineSteps/ContinousVerification/components/HealthSources/HealthSources.module.scss
@@ -33,6 +33,11 @@
 .healthsourcename {
   display: flex;
   flex-direction: row;
+  span{
+    white-space: nowrap !important; 
+  overflow: hidden !important;
+  text-overflow: ellipsis !important;
+  }
 }
 
 .disabled {
